--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ ApiBack/demo/.idea/workspace.xml
 *.uniqueId7
 *.uniqueId8
 *.uniqueId6
+ApiBack/demo/.gradle/8.3/checksums/checksums.lock
+ApiBack/demo/.gradle/8.3/dependencies-accessors/dependencies-accessors.lock
+ApiBack/demo/.gradle/8.3/executionHistory/executionHistory.lock
+ApiBack/demo/.gradle/8.3/fileHashes/fileHashes.lock
+ApiBack/demo/.gradle/buildOutputCleanup/buildOutputCleanup.lock
